modified the navbar

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           </li>
 
           <li>
-            <a href="https://www.youtube.com/channel/UCBOujspp6gNreerpQoBTA4Q" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
+            <a href="https://www.linkedin.com/in/utibe-udoma-b8059420b/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
@@ -170,11 +170,11 @@
             </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-              A Frontend Web Developer, Technical Writer, and Social Media Manager from Nigeria.
+              A Frontend Web Developer, Technical Writer, and Social Media Manager.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
-              <a href="https://medium.com/@utibeudoma2002" class="btn btn-primary">See My Works</a>
+              <a href="./assets/Utibe Udoma's Resume.pdf" class="btn btn-primary" download="Utibe Udoma's Resume">My Resume</a>
 
               <a href="#contact" class="btn btn-secondary">Contact Me</a>
             </div>
@@ -570,8 +570,8 @@
         </li>
 
         <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-youtube"></ion-icon>
+          <a href="https://www.linkedin.com/in/utibe-udoma-b8059420b/" class="social-link">
+            <ion-icon name="logo-linkedin"></ion-icon>
           </a>
         </li>
 
