added goole site verification

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Utibe Udoma</title>
-  <meta name="title" content="Utibe Udoma">
-  <meta name="description" content="This is a personal portfolio website">
+  <title>Utibe Udoma - Web Developer</title>
+<meta name="title" content="Utibe Udoma - Web Developer">
+<meta name="description" content="Explore my personal portfolio website showcasing my work in web design and development. Contact me for your design needs.">
+<meta name="google-site-verification" content="b5ibSKculCghTnTq-kiJS4uvZmpm9IsYFInUkc21jx4" />
 
   <!-- 
     - favicon
