Changed the logo navbar

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/utibe_udoma__2_-removebg-preview.png" width="64" height="24" alt="Julia home">
+        <img src="./assets/images/utibe_udoma__2_-removebg-preview.png" width="64" height="24" alt="">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="64" height="24" alt="Julia home">
+            <img src="./assets/images/utibe udoma.png" width="64" height="24" alt="">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
