added contact email

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
             </div>
 
-            <form action="mailto:" class="contact-form" data-reveal="right">
+            <form action="mailto:utibeudoma2002@gmail.com" class="contact-form" data-reveal="right">
 
               <div class="input-wrapper">
                 <input type="text" name="name" placeholder="Name *" required class="input-field">
