--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Utibe Udoma - Web Developer</title>
 <meta name="title" content="Utibe Udoma - Web Developer">
-<meta name="description" content="Explore my personal portfolio website showcasing my work in web design and development. Contact me for your design needs.">
+<meta name="description" content="Explore my personal portfolio website showcasing my work in web design and development. Contact me for your websites">
 <meta name="google-site-verification" content="b5ibSKculCghTnTq-kiJS4uvZmpm9IsYFInUkc21jx4" />
 
   <!-- 
@@ -159,7 +159,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/1689923966700.jpg" width="560" height="540" alt="Julia" class="w-100"
+            <img src="./assets/images/1689923966700.jpg" width="560" height="540" alt="Utibe" class="w-100"
               data-reveal="top">
 
           </figure>
